--- a/index.html
+++ b/index.html
@@ -843,6 +843,9 @@
   </header>
 
   <main>
+    <p>Note- Our website is currently under development, We're working hard to 
+      bring you an amazing experience. Stay tuned something great is coming soon!
+    </p>
     <h1 class="headline">Welcome to ITSA</h1>
     <p class="subheadline">
       Empowering innovation through technology and collaboration. Join our community of forward-thinking professionals shaping the future.
@@ -1048,4 +1051,5 @@ document.addEventListener('DOMContentLoaded', loadDynamicContent);
 // setInterval(loadDynamicContent, 5 * 60 * 1000);
   </script>
 </body>
+
 </html>
