--- a/admin.html
+++ b/admin.html
@@ -555,9 +555,9 @@
         // Dynamic Admin Configuration Loading
         let adminConfig = {
             credentials: {
-                regularUsername: 'itsa',
-                regularPassword: 'itsa2025',
-                superAdminPassword: 'munnaboy123'
+                regularUsername: '**********',
+                regularPassword: '*****',
+                superAdminPassword: '*****'
             },
             settings: {
                 adminTitle: 'ITSA Admin Panel',
@@ -1114,3 +1114,4 @@
     </script>
 </body>
 </html>
+
